接続文字列を指定

--- a/appsettings.json
+++ b/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Context": "Server=(localdb)\\MSSQLLocalDB;Database=asp_net_core_mvc_sample;Trusted_Connection=True;MultipleActiveResultSets=True;"
+  }
 }
